# kokoko

./: .gitignore
.github/workflows/: ci-tests.yml
bash/: install.sh
bash/bashrc.d/: shared-ssh-agent.sh
python/influx-log-handler/: README.md  pyproject.toml
python/influx-log-handler/kokoko/influx_log_handler/: __init__.py  influx_handler.py
python/influx-log-handler/tests/: test_basic.py
python/packing-utils/: pyproject.toml  ruff.toml
python/packing-utils/packing_utils/: build_utils.py  builder.py  bundle.py  cli.py  common.py  find_internal_dependencies.py  make_index.py  pyproject_utils.py  uv_utils.py
python/packing-utils/packing_utils/infratools/: git.py  log.py  proc.py  python.py  uv.py
python/packing-utils/tests/: common.py  test_git.py  test_uv.py
python/packing-utils/tests/integration/: common.py  test_build_integration.py  test_distribution_bundle.py
scripts/: test-python-packages.sh
