[project]
name = "packing-utils"
version = "0.1.0"
description = "Utilities to for uv's pyprojects"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "tomli_w",
    "packaging",
]

[dependency-groups]
dev = [
  "pytest >= 8.4",
  "pytest-asyncio",
  "ruff >= 0.15"
]

[project.scripts]
packing-utils = "packing_utils.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["packing_utils"]

[tool.pytest]
asyncio_mode = "auto"